# joke-api

./: .env.template  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: test.yaml  workflow.yaml
app/: main.py
app/api/: index.py
app/api/v1/: router.py
app/api/v1/endpoints/: info.py  joke.py
app/api/v1/schemas/: info.py  joke.py
app/core/: app.py  settings.py
app/db/: client.py  database.py  mongodb.py
app/db/models/: joke.py
app/domain/adapters/: base.py  info.py  joke.py  project_config.py  settings.py
app/domain/exceptions/: __init__.py  not_supported.py
app/domain/models/: __init__.py  abstract.py  joke.py  project_config.py  settings.py
app/overrides/: info_adapter.py  joke_adapter.py  joke_repository.py  project_config.py  settings.py  settings_adapter.py
app/repositories/: __init__.py  abstract.py  joke.py
app/utils/: logger.py  project_config_parser.py  swagger_params.py
tests/api/: test_index.py
tests/api/v1/endpoints/: test_info.py  test_joke.py
tests/core/: test_project_config_parser.py
tests/db/: test_mongo_client.py
tests/domain/adapters/: test_base.py  test_base_adapter.py  test_info_adapter.py  test_joke_adapter.py  test_project_config_adapter.py  test_settings_adapter.py
tests/utils/: test_project_config_parser.py
