[tool.poetry]
name = "joke-api"
version = "0.0.1-alpha.1"
description = "Joke Api served with FastApi"
authors = ["Algirdas Jauniskis <jauniskis.a@gmail.com>"]
readme = "README.md"
packages=[{include = "app"}]
repository="https://github.com/ajauniskis/joke-api"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^2.20.0"
fastapi = "0.85.1"
uvicorn = "0.18.3"
toml = "0.10.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pyright = "^1.1.263"
bandit = "^1.7.4"
toml = "^0.10.2"
flake8 = "^5.0.4"
Flake8-pyproject = "^1.1.0"
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
requests = "2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.pyright]
exclude = [
    "**/__pycache__",
    ".venv"
    ]
reportMissingImports = true

[tool.bandit]
exclude_dirs = [
    "**/__pycache__",
    ".venv"
    ]

[tool.flake8]
max-line-length = 88
exclude = [".venv", "__pycache__"]
